Fix header alignment

--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -1,4 +1,4 @@
-h3 {
+h2 {
   text-align: center;
   margin: 30px;
   font-size: 30px;
